1.5.7:
 * Rearranged the links on the left and right side of the wiki editing page
   so that the note title links have a little more horizontal breathing room.
 * You can now add an existing note directly to the note tree, instead of
   having to click "options" -> "show on startup".
 * Fixed a bug in which search result note summaries were not showing the
   portion of the note that matched the search term. (Luminotes Server)
 * Fixed a visual bug in which undoing the deletion of a note didn't always
   make the note reappear, even though the undeletion always worked.

1.5.6: November 12, 2008
 * Greatly improved the speed of wiki searching for Luminotes Server and
   luminotes.com. Also included a section on search performance within the
   INSTALL file.
 * Added permalinks to blog and discussion forum posts.
 * Fixed a bug in Internet Explorer in which clicking a link sometimes caused
   the browser window to scroll to the destination note, only to immediately
   scroll back to the clicked link.
 * No longer displaying annoying warning messages about Safari/Chrome support
   being considered "beta".
 * NOTE: Luminotes Server only, not Luminotes Desktop: Before you start
   Luminotes Server after this upgrade, run the following command as the
   PostgreSQL superuser (usually "postgres"):
     echo "create language plpgsql;" | psql luminotes
   Then, once you start Luminotes Server, be prepared to wait up to several
   minutes while the database search indices regenerate.

1.5.5: November 6, 2008
 * Improved speed of Luminotes Desktop by adding some database indices. This
   will help in particular for larger notebooks with many notes.
 * Added some code to automatically upgrade your database when upgrading to a
   new Luminotes release. This applies to all Luminotes products.
 * Added code to support Luminotes discussion forums.
 * Laid some of the foundational groundwork for future tags support.