@@ -13,7 +13,7 @@ In the Luminotes discussion forums, you can ask about Luminotes features and
 chat with your fellow Luminoters.
 </p>
 
-<h4><a href="/blog" target="_top">blog</a></h4>
+<h4><a href="/blog/" target="_top">blog</a></h4>
 
 <p>
 With the Luminotes blog, you can stay up to date on all the latest features
