@@ -3,6 +3,9 @@
    so that the note title links have a little more horizontal breathing room.
  * You can now add an existing note directly to the note tree, instead of
    having to click "options" -> "show on startup".
+ * Improved site navigation by adding more useful links to the page footer.
+ * Converted the Luminotes blog to work like a forum, so now you can post
+   comments on Luminotes blog posts.
  * Fixed a bug in which search result note summaries were not showing the
    portion of the note that matched the search term. (Luminotes Server)
  * Fixed a visual bug in which undoing the deletion of a note didn't always
